chore:API restructure

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,13 @@
 <html>
 
+<head>
+    <a href="/docs">SWAGGER API DOCS</a>
+    <br />
+    <a href="https://github.com/anshulagx/fp">GITHUB REPO</a>
+</head>
+
 <body>
-    <form class="form-horizontal" method="get" action="/api/dashboard">
+    <form class="form-horizontal" method="get" action="/">
         <fieldset>
 
             <!-- Form Name -->
